TL-110: Fix z-index isse with dropdown menu.

--- a/themes/custom/generic_microsite/less/style.less
+++ b/themes/custom/generic_microsite/less/style.less
@@ -635,6 +635,7 @@ body,
       display: block;
       padding: 5px 0 0;
       width: auto;
+      z-index: 9999;
       li {
         background-image: url(../images/subnav-border-top.gif);
         background-position: bottom;
